// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPage component should render correctly With default props 1`] = `
<div
  className="page"
/>
`;

exports[`ThirdPage component should render correctly With text prop 1`] = `
<div
  className="page"
>
  text
</div>
`;
